Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">exceRpt</h1>
-      <h2 class="project-tagline">The extra-cellular RNA processing toolkit.  Including software for preprocessing, filtering, alignment, and reporting of smallRNA-seq datasets</h2>
+      <h2 class="project-tagline">The extra-cellular RNA processing toolkit.  Includes software to preprocess, align, quantitate, and normalise smallRNA-seq datasets</h2>
       <a href="https://github.com/gersteinlab/exceRpt" class="btn">View on GitHub</a>
       <a href="https://github.com/gersteinlab/exceRpt/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/gersteinlab/exceRpt/tarball/master" class="btn">Download .tar.gz</a>
