Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 <p>This script will take as input a directory containing 1 or more subdirectories or zipfiles containing output from the makefile above. In this way, results from 1 or more smallRNA-seq samples can be combined, several QC plots are generated, and the read-counts are normalised ready for downstream analysis by clustering and/or differential expression.</p>
 
+<p><img src="https://dl.dropboxusercontent.com/u/2696693/exceRpt_workflow.png" alt="stuff"></p>
+
 <hr>
 
 <h2>
