Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 
     <section class="main-content">
       <h2>
+<a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview</h2>
+
+<p>The <strong>ex</strong>tra<strong>ce</strong>llular <strong>R</strong>NA <strong>P</strong>rocessing <strong>T</strong>oolkit (<strong>exceRpt</strong>) was designed to handle the variable contamination and often poor quality data obtained from low input smallRNA-seq samples such as those obtained from extra-cellular preparations.  However the tool is perfectly capable of processing data from cellular sources and, with minor modifications to the command-line call, is also capable of processing WGS/exome and long RNA-seq data too.</p>
+
+<p>The schematic diagram below details the various stages of the exceRpt pipeline including pre-processing of the raw reads, removal of nuisance contamination, alignment to the endogenous (human/mouse) genome and annotated transcriptome, and finally alignment to a large number of exogenous sequences for detection of foreign nucleic acids.</p>
+
+<p><img src="https://dl.dropboxusercontent.com/u/2696693/exceRpt_workflow.png" alt="exceRpt workflow diagram"></p>
+
+<hr>
+
+<h2>
 <a id="software" class="anchor" href="#software" aria-hidden="true"><span class="octicon octicon-link"></span></a>Software</h2>
 
 <h3>
@@ -31,8 +42,6 @@
 <a id="mergepipelinerunsr" class="anchor" href="#mergepipelinerunsr" aria-hidden="true"><span class="octicon octicon-link"></span></a>mergePipelineRuns.R</h3>
 
 <p>This script will take as input a directory containing 1 or more subdirectories or zipfiles containing output from the makefile above. In this way, results from 1 or more smallRNA-seq samples can be combined, several QC plots are generated, and the read-counts are normalised ready for downstream analysis by clustering and/or differential expression.</p>
-
-<p><img src="https://dl.dropboxusercontent.com/u/2696693/exceRpt_workflow.png" alt="exceRpt workflow diagram"></p>
 
 <hr>
 
