Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h2>
 <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview</h2>
 
-<p>The <strong>ex</strong>tra<strong>ce</strong>llular <strong>R</strong>NA <strong>P</strong>rocessing <strong>T</strong>oolkit (<strong>exceRpt</strong>) was designed to handle the variable contamination and often poor quality data obtained from low input smallRNA-seq samples such as those obtained from extra-cellular preparations.  However the tool is perfectly capable of processing data from cellular sources and, with minor modifications to the command-line call, is also capable of processing WGS/exome and long RNA-seq data too.</p>
+<p>The <strong>ex</strong>tra<strong>ce</strong>llular <strong>R</strong>NA <strong>p</strong>rocessing <strong>t</strong>oolkit (<strong>exceRpt</strong>) was designed to handle the variable contamination and often poor quality data obtained from low input smallRNA-seq samples such as those obtained from extra-cellular preparations.  However the tool is perfectly capable of processing data from cellular sources and, with minor modifications to the command-line call, is also capable of processing WGS/exome and long RNA-seq data too.</p>
 
 <p>The schematic diagram below details the various stages of the exceRpt pipeline including pre-processing of the raw reads, removal of nuisance contamination, alignment to the endogenous (human/mouse) genome and annotated transcriptome, and finally alignment to a large number of exogenous sequences for detection of foreign nucleic acids.</p>
 
