Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 <h3>
 <a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dependencies</h3>
 
+<h4>
+<a id="core-dependencies" class="anchor" href="#core-dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Core dependencies</h4>
+
 <p><a href="https://java.com/en/download">Java v1.6+</a></p>
 
 <p><a href="http://hannonlab.cshl.edu/fastx_toolkit">fastx v0.0.14+</a></p>
@@ -68,9 +71,12 @@
 
 <p><a href="http://www.bioinformatics.babraham.ac.uk/projects/fastqc">fastQC v0.11.2+</a></p>
 
-<p><a href="https://github.com/ncbi/sra-tools">sratoolkit v2.5.1+</a></p>
+<h4>
+<a id="optional-dependencies" class="anchor" href="#optional-dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Optional dependencies</h4>
 
-<p><a href="https://github.com/alexdobin/STAR/releases">STAR v2.4.2a+</a></p>
+<p><a href="https://github.com/ncbi/sra-tools">sratoolkit v2.5.1+</a> - required for processing .sra files from NCBI archival data</p>
+
+<p><a href="https://github.com/alexdobin/STAR/releases">STAR v2.4.2a+</a> - required for most exogenous alignments</p>
 
 <h3>
 <a id="mergepipelinerunsr-1" class="anchor" href="#mergepipelinerunsr-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>mergePipelineRuns.R</h3>
