Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -169,58 +169,62 @@ EXE_DIR                     [location of the pipeline, database, and dependencie
 <strong>Read-lengths</strong> (after 3' adapters/barcodes are removed)</td>
 </tr>
 <tr>
-<td><strong>Transcriptome quantifications:</strong></td>
+<td><strong>Raw transcriptome quantifications:</strong></td>
 <td></td>
 </tr>
 <tr>
 <td><code>exceRpt_miRNA_ReadCounts.txt</code></td>
 <td>
-<strong>Raw miRNA</strong> read-counts</td>
-</tr>
-<tr>
-<td><code>exceRpt_miRNA_ReadsPerMillion.txt</code></td>
-<td>
-<strong>Normalised miRNA</strong> quantifications</td>
+<strong>miRNA</strong> read-counts quantifications</td>
 </tr>
 <tr>
 <td><code>exceRpt_tRNA_ReadCounts.txt</code></td>
 <td>
-<strong>Raw tRNA</strong> read-counts</td>
-</tr>
-<tr>
-<td><code>exceRpt_tRNA_ReadsPerMillion.txt</code></td>
-<td>
-<strong>Normalised tRNA</strong> quantifications</td>
+<strong>tRNA</strong> read-counts quantifications</td>
 </tr>
 <tr>
 <td><code>exceRpt_piRNA_ReadCounts.txt</code></td>
 <td>
-<strong>Raw piRNA</strong> read-counts</td>
-</tr>
-<tr>
-<td><code>exceRpt_piRNA_ReadsPerMillion.txt</code></td>
-<td>
-<strong>Normalised piRNA</strong> quantifications</td>
+<strong>piRNA</strong> read-counts quantifications</td>
 </tr>
 <tr>
 <td><code>exceRpt_gencode_ReadCounts.txt</code></td>
 <td>
-<strong>Raw gencode</strong> read-counts</td>
-</tr>
-<tr>
-<td><code>exceRpt_gencode_ReadsPerMillion.txt</code></td>
-<td>
-<strong>Normalised gencode</strong> quantifications</td>
+<strong>gencode</strong> read-counts quantifications</td>
 </tr>
 <tr>
 <td><code>exceRpt_circularRNA_ReadCounts.txt</code></td>
 <td>
-<strong>Raw circularRNA</strong> read-counts</td>
+<strong>circularRNA</strong> read-count quantifications</td>
+</tr>
+<tr>
+<td><strong>Normalised transcriptome quantifications:</strong></td>
+<td></td>
+</tr>
+<tr>
+<td><code>exceRpt_miRNA_ReadsPerMillion.txt</code></td>
+<td>
+<strong>miRNA</strong> RPM quantifications</td>
+</tr>
+<tr>
+<td><code>exceRpt_tRNA_ReadsPerMillion.txt</code></td>
+<td>
+<strong>tRNA</strong> RPM quantifications</td>
+</tr>
+<tr>
+<td><code>exceRpt_piRNA_ReadsPerMillion.txt</code></td>
+<td>
+<strong>piRNA</strong> RPM quantifications</td>
+</tr>
+<tr>
+<td><code>exceRpt_gencode_ReadsPerMillion.txt</code></td>
+<td>
+<strong>gencode</strong> RPM quantifications</td>
 </tr>
 <tr>
 <td><code>exceRpt_circularRNA_ReadsPerMillion.txt</code></td>
 <td>
-<strong>Normalised circularRNA</strong> quantifications</td>
+<strong>circularRNA</strong> RPM quantifications</td>
 </tr>
 <tr>
 <td><strong>R objects:</strong></td>
