Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -232,11 +232,13 @@ EXE_DIR                     [location of the pipeline, database, and dependencie
 </tr>
 <tr>
 <td><code>exceRpt_smallRNAQuants_ReadCounts.RData</code></td>
-<td><strong>All raw data (binary R object)</strong></td>
+<td>
+<strong>All raw data</strong> (binary R object)</td>
 </tr>
 <tr>
 <td><code>exceRpt_smallRNAQuants_ReadsPerMillion.RData</code></td>
-<td><strong>All normalised data (binary R object)</strong></td>
+<td>
+<strong>All normalised data</strong> (binary R object)</td>
 </tr>
 </tbody>
 </table>
