--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <h1>
-<a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview</h1>
+<a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Overview</h1>
 
 <p>The <strong>ex</strong>tra-<strong>ce</strong>llular <strong>R</strong>NA <strong>p</strong>rocessing <strong>t</strong>oolkit (<strong>exceRpt</strong>) was designed to handle the variable contamination and often poor quality data obtained from low input <strong>smallRNA-seq</strong> samples such as those obtained from <strong>extra-cellular</strong> preparations.  However the tool is perfectly capable of processing data from more standard <strong>cellular</strong> preparations and, with minor modifications to the command-line call, is also capable of processing <strong>WGS/exome</strong> and <strong>long RNA-seq</strong> data.</p>
 
@@ -31,29 +31,29 @@
 <hr>
 
 <h1>
-<a id="how-to-use-excerpt" class="anchor" href="#how-to-use-excerpt" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use exceRpt</h1>
+<a id="how-to-use-excerpt" class="anchor" href="#how-to-use-excerpt" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to use exceRpt</h1>
 
 <h2>
-<a id="genboreeorg" class="anchor" href="#genboreeorg" aria-hidden="true"><span class="octicon octicon-link"></span></a>Genboree.org</h2>
+<a id="genboreeorg" class="anchor" href="#genboreeorg" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Genboree.org</h2>
 
 <p>Signing up for an account on <a href="http://genboree.org">Genboree.org</a> is by far the fastest way to start using exceRpt.  The Genboree Workbench provides a graphical interface to exceRpt that is free for academic use.  Set up a free account to use the <a href="http://genboree.org/java-bin/login.jsp">Genboree Workbench</a>, upload some data, and start using exceRpt, all via the browser (<a href="http://genboree.org/theCommons/projects/exrna-tools-may2014/wiki/Small%20RNA-seq%20Pipeline">instructions available here</a>).</p>
 
 <h2>
-<a id="docker" class="anchor" href="#docker" aria-hidden="true"><span class="octicon octicon-link"></span></a>Docker</h2>
+<a id="docker" class="anchor" href="#docker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Docker</h2>
 
 <p>Slightly more effort to get set up than using Genboree, but using the <a href="https://www.docker.com">Docker</a> image is the best way to use exceRpt on your own machine/cluster.  The <a href="https://hub.docker.com/r/rkitchen/excerpt">exceRpt Docker image</a> is pre-baked with all required dependencies and should 'just work' with minimal installation.  Docker is native on Red Hat Enterprise Linux distributions (RHEL) and also available on Amazon, enabling exceRpt to be run in the cloud.  Instructions are available for installing Docker on <a href="http://docs.docker.com/mac/started">Mac OS X</a>, <a href="http://docs.docker.com/linux/started">Linux</a>, <a href="http://docs.docker.com/windows/started">Windows</a>, and <a href="http://docs.aws.amazon.com/AmazonECS/latest/developerguide/docker-basics.html">Amazon Web Services</a>. </p>
 
-<p><strong>BEWARE</strong>, exceRpt requires about <strong>10GB of RAM</strong> in order to function properly, runs on machines with less than this amount of available memory will very likely fail.  If running Docker inside a virtual machine (such as via VirtualBox on Mac OS X) it is <strong>important to check that the VM has been initialised with at least 10GB of memory</strong>.  This is usually a setting that can be modified as long as the VM is not currently running.</p>
+<p><strong>BEWARE</strong>, exceRpt requires about <strong>16GB of RAM</strong> in order to function properly, runs on machines with less than this amount of available memory will very likely fail.  If running Docker inside a virtual machine (such as via VirtualBox on Mac OS X) it is <strong>important to check that the VM has been initialised with at least 16GB of memory</strong>.  This is usually a setting that can be modified as long as the VM is not currently running.</p>
 
 <p>As with the manual installation described below, <strong>you will also need to download the pre-compiled genome and transcriptome indices</strong> for exceRpt to use.  These are too large to be included in the Docker image, but using these links you can download the exceRpt database files:</p>
 
 <ul>
 <li>
-<a href="http://homes.gersteinlab.org/people/rrk24/exceRpt/exceRptDB_hg19.tgz">human hg19</a>; </li>
+<a href="http://homes.gersteinlab.org/people/rrk24/exceRpt/exceRptDB_v4_hg19_lowmem.tgz">human hg19</a>; </li>
 <li>
-<a href="http://homes.gersteinlab.org/people/rrk24/exceRpt/exceRptDB_hg38.tgz">human hg38</a>;</li>
+<a href="http://homes.gersteinlab.org/people/rrk24/exceRpt/exceRptDB_v4_hg38_lowmem.tgz">human hg38</a>;</li>
 <li>
-<a href="http://homes.gersteinlab.org/people/rrk24/exceRpt/exceRptDB_mm10.tgz">mouse mm10</a>.</li>
+<a href="http://homes.gersteinlab.org/people/rrk24/exceRpt/exceRptDB_v4_mm10_lowmem.tgz">mouse mm10</a>.</li>
 </ul>
 
 <p>Once you have downloaded the desired genome database and have successfully installed and started Docker on your machine/cluster/AWS-instance only a few commands are required to install and run exceRpt.  </p>
@@ -125,7 +125,7 @@ wget ftp://ftp.ddbj.nig.ac.jp/ddbj_database/dra/sralite/ByExp/litesra/SRX/SRX010
 </code></pre>
 
 <h2>
-<a id="analysis-customisation-options" class="anchor" href="#analysis-customisation-options" aria-hidden="true"><span class="octicon octicon-link"></span></a>Analysis customisation options</h2>
+<a id="analysis-customisation-options" class="anchor" href="#analysis-customisation-options" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Analysis customisation options</h2>
 
 <p>There are a number of options available for customising the analysis that are specified using the command-line.  These are a list of the most commonly-modified options and their default values.</p>
 
@@ -142,7 +142,7 @@ N_THREADS                   [default '4']
 </code></pre>
 
 <h2>
-<a id="manual-installation" class="anchor" href="#manual-installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Manual installation</h2>
+<a id="manual-installation" class="anchor" href="#manual-installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Manual installation</h2>
 
 <p>This is the most labour-intensive mode of using exceRpt, but it offers the most flexibility.  Generally not recommended unless you are very familiar with the *NIX environment, shell scripting, and makefile syntax.  Detailed instructions on how to install exceRpt and its various dependencies will [one day] be listed toward the bottom of this page.</p>
 
@@ -158,20 +158,20 @@ N_THREADS                   [default '4']
 <hr>
 
 <h1>
-<a id="processing-excerpt-output-from-multiple-samples" class="anchor" href="#processing-excerpt-output-from-multiple-samples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Processing exceRpt output from multiple samples</h1>
+<a id="processing-excerpt-output-from-multiple-samples" class="anchor" href="#processing-excerpt-output-from-multiple-samples" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Processing exceRpt output from multiple samples</h1>
 
 <p>Also provided is a script to combine output from multiple samples run through the exceRpt pipeline.  The script (<code>mergePipelineRuns.R</code>) will take as input a directory containing 1 or more subdirectories or zipfiles containing output from the makefile above. In this way, results from 1 or more smallRNA-seq samples can be combined, several QC plots are generated, and the read-counts are normalised ready for downstream analysis by clustering and/or differential expression.</p>
 
 <h2>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
 
 <p>This script is comparatively much simpler to install.  Once the R software (<a href="http://cran.r-project.org/">http://cran.r-project.org/</a>) is set up on your system the script should automatically identify and install all required dependencies.  Again, this script is available on the Genboree Workbench (<a href="http://www.genboree.org">www.genboree.org</a>) and is also free for academic use.</p>
 
 <h2>
-<a id="using-the-script" class="anchor" href="#using-the-script" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using the script</h2>
+<a id="using-the-script" class="anchor" href="#using-the-script" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using the script</h2>
 
 <h3>
-<a id="on-the-command-line" class="anchor" href="#on-the-command-line" aria-hidden="true"><span class="octicon octicon-link"></span></a>On the command line</h3>
+<a id="on-the-command-line" class="anchor" href="#on-the-command-line" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>On the command line</h3>
 
 <p>The Rscript application provides a neat means of running the script:</p>
 
@@ -181,7 +181,7 @@ N_THREADS                   [default '4']
 <p>Here, the directory in which the script will search for valid exceRpt output (<code>~/DirectoryContainingMyexceRptRuns</code>) should be the same as the (<code>~/DirectoryInWhichToPutMyResults</code>) specific when running each sample through exceRpt.</p>
 
 <h3>
-<a id="interactively-in-r" class="anchor" href="#interactively-in-r" aria-hidden="true"><span class="octicon octicon-link"></span></a>Interactively in R</h3>
+<a id="interactively-in-r" class="anchor" href="#interactively-in-r" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Interactively in R</h3>
 
 <p>Alternatively in an interactive R session, the merge can be performed using the following two commands:</p>
 
@@ -192,7 +192,7 @@ N_THREADS                   [default '4']
 <p>Apart from some status messages, warnings, or possibly errors, no R objects are output from this function.  Instead several files are created that are described immediately below...</p>
 
 <h2>
-<a id="script-output" class="anchor" href="#script-output" aria-hidden="true"><span class="octicon octicon-link"></span></a>Script output</h2>
+<a id="script-output" class="anchor" href="#script-output" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Script output</h2>
 
 <p>Several files are output by the script in the location of the input exceRpt results (or somewhere else if explicitly specified).  All output files are prefixed with 'exceRpt_' and contain a variety of information regarding all samples input:</p>
 
@@ -300,13 +300,13 @@ N_THREADS                   [default '4']
 <hr>
 
 <h1>
-<a id="manual-installation-1" class="anchor" href="#manual-installation-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Manual Installation</h1>
+<a id="manual-installation-1" class="anchor" href="#manual-installation-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Manual Installation</h1>
 
 <h2>
-<a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dependencies</h2>
+<a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h2>
 
 <h3>
-<a id="core-dependencies" class="anchor" href="#core-dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Core dependencies</h3>
+<a id="core-dependencies" class="anchor" href="#core-dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Core dependencies</h3>
 
 <ul>
 <li><a href="https://java.com/en/download">Java v1.6+</a></li>
@@ -318,7 +318,7 @@ N_THREADS                   [default '4']
 </ul>
 
 <h3>
-<a id="optional-dependencies" class="anchor" href="#optional-dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Optional dependencies</h3>
+<a id="optional-dependencies" class="anchor" href="#optional-dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Optional dependencies</h3>
 
 <ul>
 <li>
@@ -328,7 +328,7 @@ N_THREADS                   [default '4']
 </ul>
 
 <h2>
-<a id="installation-steps-incomplete" class="anchor" href="#installation-steps-incomplete" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation steps (incomplete)</h2>
+<a id="installation-steps-incomplete" class="anchor" href="#installation-steps-incomplete" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation steps (incomplete)</h2>
 
 <ol>
 <li>Install dependencies</li>
@@ -343,7 +343,7 @@ N_THREADS                   [default '4']
 <hr>
 
 <h1>
-<a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support</h1>
+<a id="support" class="anchor" href="#support" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support</h1>
 
 <p>Rob Kitchen; rob [dot] kitchen [at] yale [dot] edu</p>
 
